[package]
name = "mdrc-pacbot-util"
version = "0.1.0"
edition = "2021"
documentation = "https://rit-mdrc.github.io/mdrc-pacbot-util/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.1" }
chrono = "0.4.31"
eframe = { version = "0.25.0", default-features = false, features = [ "accesskit", "default_fonts", "glow", "wayland", "web_screen_reader", "x11" ] }
egui_dock = "0.10.0"
futures-util = "0.3.28"
native-dialog = { version = "0.6.4", features = ["windows_dpi_awareness", "windows_visual_styles"] }
num_enum = "0.7.0"
rand = "0.8.5"
rapier2d = { version = "0.17.2", features = ["serde-serialize", "parallel"] }
rayon = "1.8.0"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "parking_lot", "rt"] }
tokio-tungstenite = "0.20.1"
array-init = "2.1.0"
ndarray = "0.15.6"
pacbot-rs = { git = "https://github.com/RIT-MDRC/pacbot-rs.git", rev = "fbef4eb72a76164cee576822860bad42e40ad2bc" }
egui-phosphor = "0.3.2"
rerun = "0.12.1"
