[workspace]

resolver = "2"

members = [ "core_pb",
    "mdrc-pacbot-gui",
    "mdrc-pacbot-server",
    "mdrc-pacbot-simulation",
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
