[package]
name = "core_pb"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["pacbot-rs/std", "nalgebra/std", "serde/std", "ordered-float/std", "bincode/std", "async-channel", "futures", "async-std", "async-tungstenite"]
wasm = ["pacbot-rs/wasm"]
robot = ["heapless", "embedded-graphics"]

[dependencies]
nalgebra = { version = "0.32.5", default-features = false, features = ["serde-serialize-no-std"] }
ordered-float = { version = "4.2.0", default-features = false }
pacbot-rs = { git = "https://github.com/RIT-MDRC/pacbot-rs.git", rev = "2f1aed251a2b82e68f83075b0358eb3acdde0738", default-features = false }
serde = { version = "1.0.201", default-features = false, features = ["derive"] }
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["serde"] }
defmt = { version = "0.3.8", optional = true }
heapless = { version = "0.8.0", optional = true }
log = { version = "0.4.22", optional = true }
embedded-graphics = { version = "0.8.1", optional = true }
async-channel = { version = "2.3.1", optional = true }
futures = { version = "0.3.30", optional = true }
async-std = { version = "1.12.0", optional = true }


[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.69", features = ["WebSocket", "ErrorEvent", "MessageEvent", "FileReader", "ProgressEvent"] }
wasm-bindgen-futures = "0.4.42"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-tungstenite = { version = "0.26.2", optional = true, features = ["async-std-runtime"] }