[package]
name = "gui_pb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_pb = { path = "../core_pb", features = ["wasm"] }
eframe = "0.27.2"
egui-phosphor = "0.5.0"
egui_dock = "0.12.0"
anyhow = "1.0.82"
serde = { version = "1.0.199", features = ["derive"] }
tungstenite = "0.21.0"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
nalgebra = "0.32.5"
regex = "1.10.4"
web-time = "1.1.0"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
log = "0.4.21"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
native-dialog = { version = "0.7.0", features = ["windows_dpi_awareness", "windows_visual_styles"] }
