[package]
name = "gui_pb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_pb = { path = "../core_pb", features = ["wasm", "egui-phosphor", "log"] }
anyhow = "1.0.82"
serde = { version = "1.0.199", features = ["derive"] }
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
web-time = "1.1.0"
gilrs = { version = "0.11.0", default-features = false, features = ["xinput"] }
log = "0.4.21"

# Math
nalgebra = "0.33.2"
regex = "1.10.4"

# Egui
eframe = { version = "0.32.1", features = ["x11"] }
egui_plot = "0.33.0"
egui_dock = "0.17.0"
egui-phosphor = "0.10.0"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
    "WebSocket",
    "ErrorEvent",
    "MessageEvent",
    "FileReader",
    "ProgressEvent",
    "CssStyleDeclaration",
    "HtmlElement",
    "HtmlDivElement",
] }
js-sys = "0.3.77"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
native-dialog = { version = "0.7.0", features = [
    "windows_dpi_awareness",
    "windows_visual_styles",
] }
env_logger = "0.11.5"
