[workspace]

[package]
name = "mdrc-pacbot-pico"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_pb = { path = "../core_pb", default-features = false, features = ["robot", "defmt"] }

embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-sync = { version = "0.6.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-executor = { version = "0.5.0", git = "https://github.com/embassy-rs/embassy.git", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers", "task-arena-size-65536"] }
embassy-time = { version = "0.3", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-futures = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git" }
#embassy-usb = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
#embassy-usb-logger = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy.git" }
#usbd-hid = "0.7.0"
embassy-net = { version = "0.4.0", git = "https://github.com/embassy-rs/embassy.git", default-features = false, features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
cyw43 = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "firmware-logs"] }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "overclock"] }
embassy-boot-rp = { version = "0.2.0", git = "https://github.com/embassy-rs/embassy.git" }

ssd1306 = { version = "0.9.0", default-features = false, features = ["async", "embedded-graphics-core", "graphics"] }

defmt = "0.3.6"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
#panic-reset = "0.1.1"
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
heapless = "0.8"


embedded-hal-1 = { package = "embedded-hal", version = "1.0.0" }
embedded-hal-async = "1.0.0-rc.3"
embedded-hal-bus = { version = "0.1.0-rc.3", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
#embedded-storage = { version = "0.3" }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
pid = "4.0.0"
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["serde"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
num-traits = { version = "0.2.18", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = ["defmt"] }
display-interface = { version = "0.5.0", features = ["defmt-03"] }
vl53l4cd = { version = "0.4.0", default-features = false, features = ["defmt-03"] }
bno08x-async = { version = "0.2.0", git = "https://github.com/MJE10/bno080", features = ["defmt"], rev = "eaadaef31e46416cfb07d007325f99df92e13236" }

[profile.release]
debug = 2
opt-level = "z"

[profile.dev]
lto = true
opt-level = "z"
