[workspace]

[package]
name = "mdrc-pacbot-pico"
version = "0.1.0"
edition = "2021"

[dependencies]
core_pb = { path = "../core_pb", default-features = false, features = ["defmt", "micromath"] }

embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-executor = { version = "0.7", features = ["task-arena-size-98304", "arch-cortex-m", "executor-interrupt", "executor-thread", "defmt"] }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.3", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
embassy-net = { version = "0.6.0", features = ["defmt", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6", "multicast"] }
embassy-net-wiznet = { version = "0.2.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }
embassy-usb-logger = { version = "0.4.0" }
cyw43 = { version = "0.3.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.3.0", features = ["defmt"] }
embassy-boot-rp = { version = "0.4.0", features = ["defmt"] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
display-interface-spi = "0.5.0"
embedded-graphics = "0.8.1"
mipidsi = "0.8.0"
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.4.0"
heapless = "0.8"
usbd-hid = "0.8.1"
rand_core = "0.6.4"
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = "2.1"
once_cell = { version = "1.20.2", default-features = false, features = ["critical-section"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = { git = "https://github.com/rp-rs/pio-rs", rev = "fa586448b0b223217eec8c92c19fe6823dd04cc4" }
pio = { git = "https://github.com/rp-rs/pio-rs", rev = "fa586448b0b223217eec8c92c19fe6823dd04cc4" }
rand = { version = "0.8.5", default-features = false }
embedded-sdmmc = "0.7.0"

ssd1306 = { version = "0.9.0", default-features = false, features = ["async", "embedded-graphics-core", "graphics"] }
maybe-async-cfg = { version = "=0.2.4", default-features = false }

display-interface = { version = "0.5.0", features = ["defmt-03"] }
pid = "4.0.0"
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["serde"] }
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
num-traits = { version = "0.2.18", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = ["defmt", "proto-ipv4"] }
format_no_std = "1.2.0"
vl53l4cd = { version = "0.4.0", default-features = false, features = ["defmt-03"] }
bno08x-async = { version = "0.2.0", git = "https://github.com/MJE10/bno080", features = ["defmt"] }
micromath = "2.1.0"

[profile.release]
lto = true
opt-level = "z"
incremental = false
codegen-units = 1
debug = true

[profile.dev]
lto = true
opt-level = "z"
