[package]
name = "server_pb"
version = "0.1.0"
edition = "2021"
default-run = "server_pb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "0.20"
tungstenite = "0.20"
url = "2.5.4"

core_pb = { path = "../core_pb", features = ["log"] }
nalgebra = { version = "0.33.2", features = ["serde", "serde-serialize"] }
serde = { version = "1.0.198", features = ["derive", "std"] }
rand = "0.8.5"
tokio = { version = "1.38.0", features = ["full"] }
futures-util = { version = "0.3.30", features = ["sink", "std"] }
simple-websockets = "0.1.6"
async-tungstenite = "0.26.2"
futures = "0.3.30"
async-channel = "2.3.1"
env_logger = "0.11.5"
log = "0.4.22"
defmt-decoder = { version = "0.4.0", features = ["unstable"] }
defmt-parser = { version = "0.4.1", features = ["unstable"] }
ouroboros = "0.18.4"

# When an IDE tries to load the project with WASM target, it shouldn't run Pyo3 build commands
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rl_pb = { git = "https://github.com/RIT-MDRC/pacbot-rl.git", package = "pacbot_rs", rev = "a95eebeaf23f35ca4825e311b5d6f6c29528811a" }