[package]
name = "sim3_pb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_pb = { path = "../core_pb", features = ["std", "log"] }
bevy_rapier3d = { version = "0.28.0", features = ["debug-render-3d"] }

[dependencies.bevy]
version = "0.15.1"
default-features = false
features = [
    # Bevy functionality:
    "multi_threaded", # Run with multithreading
    "bevy_winit", # Window management (cross-platform Winit backend)
    "x11", # Window management for linux
    "tonemapping_luts", # TonyMcMapFace tonemapping
]
