[workspace]

[package]
name = "sim3ai_pb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_pb = { path = "../core_pb", features = ["std", "log"] }
sim3_pb = { path = "../sim3_pb" }
pid = "4.0.0"
rapier3d = { version = "0.22.0" }
glam = "0.29.2"

[profile.dev.package.rapier3d]
opt-level = 3

[profile.release]
codegen-units = 1