[workspace]

[package]
edition = "2021"
name = "mdrc-pacbot-pico-boot"
version = "0.1.0"
description = "Bootloader for RP2040 chips"

[dependencies]
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }

embassy-rp = { version = "0.3", features = ["rp2040"] }
embassy-boot-rp = "0.4"
embassy-sync = "0.6.2"
embassy-time = { version = "0.4", features = [] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7" }
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.0"
cfg-if = "1.0.0"

[features]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "embassy-boot-rp/defmt",
    "embassy-rp/defmt",
]

[profile.release]
debug = true
opt-level = 's'
